--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             margin: 0;
         }
         </style>
-        <title></title>
+        <title>Plan de Trabajo Servicios Públicos</title>
+         <!-- Icono -->
+         <link rel="icon" href="./images/favicon1.ico">
     </head>
     <body>
         <div id="map">
